# lyd

./: .gitignore  COPYING  Makefile  Makefile.am  audio.c  autogen.sh  biquad.c  compiler.c  configure.ac  lyd-private.h  lyd.c  lyd.h  lyd.pc.in  midi.c  mini.c  music.c  osc.c  test.c  ui.c  welcome.h
core/: lyd-compiler.c  lyd-private.h  lyd-voice.c  lyd.c  lyd.h
doc/: Makefile.am  index.html  lyd-reference.c  lyd.css
examples/: Makefile.am  audio.c  interpolated-param.c  lyd-hi.c  lyd-midi.c  midi-test.c  music.c  patches.c  scale.c  sun-audio.c  test.c  test2.c  txtfile.c  ui.c  video.c  wave-storm.c
lyd/: Makefile.am  biquad.c  general-midi.txt  lyd-audio-output.c  lyd-audio.c  lyd-compiler.c  lyd-extend.h  lyd-midi.c  lyd-ops.c  lyd-ops.inc  lyd-patches.c  lyd-private.h  lyd-vm.c  lyd-voice.c  lyd.c  lyd.h  rpi-fm.c
lyd/core/: lyd-compiler.c  lyd-extend.h  lyd-mixer.c  lyd-ops.c  lyd-ops.inc  lyd-private.h  lyd-vm.c  lyd.c
